--- a/qr-conf-jee-backend/.project
+++ b/qr-conf-jee-backend/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>qf-conf-jee-backend</name>
+	<name>qr-conf-jee-backend</name>
 	<comment></comment>
 	<projects>
 	</projects>
